Fix uneven widths of thumbnails

--- a/Client/src/app/recipe-list/recipe-list.component.scss
+++ b/Client/src/app/recipe-list/recipe-list.component.scss
@@ -11,6 +11,10 @@ main {
     }
 }
 
+.thumbnail {
+    max-width: 100%;
+}
+
 table {
     width: 100%;
     th {
